vlib/v/checker/tests/as_cast_option_result_unhandled_err.vv
type Sum = int | string

fn ret_sum_result() !Sum {
	return 0
}

fn ret_sum_option() ?Sum {
	return '0'
}

_ := ret_sum_result() as int
_ := ret_sum_option() as string
